--- a/res/layout/ui_create_speak.xml
+++ b/res/layout/ui_create_speak.xml
@@ -1,33 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.app.demos.layout.ResizeLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/ui_create_speak_resizeLayout"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/abc_action_bar_default_height_material"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:scaleType="fitCenter"
-            android:src="@drawable/action_bar_back"/>
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:text="发表speak"
-            android:gravity="center"
-            android:layout_weight="1"/>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:scaleType="fitCenter"
-            android:src="@drawable/action_bar_back"/>
-    </LinearLayout>
+    <include layout="@layout/toolbar" />
 
     <LinearLayout
         android:orientation="vertical"
@@ -48,9 +27,8 @@
                 <EditText
                     android:id="@+id/ui_create_speak_edit_content"
                     android:textSize="@dimen/feed_card_content_text_size"
-                    android:gravity="top|left|center"
+                    android:gravity="top|start|center"
                     android:textColor="@android:color/black"
-                    android:background="@null"
                     android:padding="10.0dip"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
@@ -63,7 +41,8 @@
                     android:id="@+id/ui_create_speak_bg_image"
                     android:layout_width="100.0dip"
                     android:layout_height="100.0dip"
-                    android:layout_marginLeft="10.0dip"
+                    android:layout_marginStart="10.0dp"
+                    android:layout_marginLeft="10.0dp"
                     android:scaleType="centerCrop"
                     android:layout_below="@id/ui_create_speak_edit_content"
                     android:contentDescription="@null" />
@@ -72,56 +51,73 @@
 
         </ScrollView>
 
-    <RelativeLayout
-        android:background="@drawable/bottom_bar_bg"
-        android:padding="10.0dip"
-        android:layout_width="fill_parent"
-        android:layout_height="@dimen/bottom_bar_height">
-
-        <CheckBox
-            android:id="@+id/operation_bar_stranger_enabled"
+        <com.app.demos.layout.ButtonFloatSmall
+            android:id="@+id/buttonFloat_small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:button="@drawable/check_box"
-            android:text="comment_enabled" />
+            android:layout_gravity="right"
+            android:layout_marginRight="@dimen/float_button_margin"
+            android:layout_marginBottom="@dimen/float_button_margin"
+            android:layout_marginEnd="@dimen/float_button_margin"
+            android:background="@color/colorPrimary"
+            materialdesign:iconDrawable="@drawable/ic_action_new" />
 
-        <ImageView
-            android:id="@+id/ui_create_speak_iv_picture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_publish_operation_bar_emoticon"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:contentDescription="@null" />
 
-        <ImageView
-            android:id="@+id/operation_bar_image_center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10.0dip"
-            android:src="@drawable/ic_publish_operation_bar_subject"
-            android:layout_toLeftOf="@+id/ui_create_speak_iv_picture"
-            android:layout_centerVertical="true"
-            android:onClick="clickOnSubjectPan"
-            android:contentDescription="@null" />
+        <RelativeLayout
+            android:background="@drawable/bottom_bar_bg"
+            android:padding="10.0dip"
+            android:layout_width="fill_parent"
+            android:layout_height="@dimen/bottom_bar_height">
 
-        <ImageView
-            android:id="@+id/ui_create_speak_iv_expression"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10.0dip"
-            android:src="@drawable/ic_publish_operation_bar_photo"
-            android:layout_toLeftOf="@+id/operation_bar_image_center"
-            android:layout_centerVertical="true"
-            android:contentDescription="@null" />
-    </RelativeLayout>
+            <CheckBox
+                android:id="@+id/operation_bar_stranger_enabled"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:button="@drawable/check_box"
+                android:text="comment_enabled" />
 
-    <include layout="@layout/horizontal_line_dip" />
+            <ImageView
+                android:id="@+id/ui_create_speak_iv_picture"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_publish_operation_bar_photo"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:contentDescription="@null" />
 
-    <FrameLayout
-        android:id="@+id/ui_create_speak_fragment_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+            <ImageView
+                android:id="@+id/operation_bar_image_center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10.0dip"
+                android:layout_marginEnd="10.0dip"
+                android:src="@drawable/ic_publish_operation_bar_subject"
+                android:layout_toStartOf="@+id/ui_create_speak_iv_picture"
+                android:layout_toLeftOf="@+id/ui_create_speak_iv_picture"
+                android:layout_centerVertical="true"
+                android:onClick="clickOnSubjectPan"
+                android:contentDescription="@null" />
+
+            <ImageView
+                android:id="@+id/ui_create_speak_iv_expression"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10.0dip"
+                android:layout_marginEnd="10.0dip"
+                android:src="@drawable/ic_publish_operation_bar_emoticon"
+                android:layout_toStartOf="@+id/operation_bar_image_center"
+                android:layout_toLeftOf="@+id/operation_bar_image_center"
+                android:layout_centerVertical="true"
+                android:contentDescription="@null" />
+        </RelativeLayout>
+
+        <include layout="@layout/horizontal_line_dip" />
+
+        <FrameLayout
+            android:id="@+id/ui_create_speak_fragment_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
-</LinearLayout>
+</com.app.demos.layout.ResizeLinearLayout>
