--- a/res/layout/action_bar_menu_text_item.xml
+++ b/res/layout/action_bar_menu_text_item.xml
@@ -6,4 +6,5 @@
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
     style="@style/ActionButton"
+    android:textColor="@android:color/white"
   xmlns:android="http://schemas.android.com/apk/res/android" />
