--- a/res/layout/ui_webview.xml
+++ b/res/layout/ui_webview.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.app.demos.ui.webview.BaseWebView"
+    tools:context="com.app.demos.ui.webview.BaseWebUi"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
