--- a/res/layout/action_bar_menu_image_item.xml
+++ b/res/layout/action_bar_menu_image_item.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView
+    android:id="@+id/action_bar_item_image"
     android:layout_gravity="center_vertical"
     android:background="@drawable/item_background_holo_light"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" style="@style/ActionButton"
-  xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:layout_height="wrap_content"
+    style="@style/ActionButton"
+  xmlns:android="http://schemas.android.com/apk/res/android"
+    android:contentDescription="@null" />
