--- a/res/layout/test_select_pic_layout.xml
+++ b/res/layout/test_select_pic_layout.xml
@@ -4,7 +4,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black">
+    android:background="@android:color/black"
+    android:gravity="bottom">
 
     <Button
         android:id="@+id/btn_take_photo"
