--- a/res/layout/ui_create_speak.xml
+++ b/res/layout/ui_create_speak.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.app.demos.layout.ResizeLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ui_create_speak_resizeLayout"
     android:orientation="vertical"
@@ -50,17 +50,6 @@
             </RelativeLayout>
 
         </ScrollView>
-
-        <com.app.demos.layout.ButtonFloatSmall
-            android:id="@+id/buttonFloat_small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginRight="@dimen/float_button_margin"
-            android:layout_marginBottom="@dimen/float_button_margin"
-            android:layout_marginEnd="@dimen/float_button_margin"
-            android:background="@color/colorPrimary"
-            materialdesign:iconDrawable="@drawable/ic_send_light" />
 
 
         <RelativeLayout
@@ -120,4 +109,4 @@
             android:layout_height="wrap_content" />
 
     </LinearLayout>
-</com.app.demos.layout.ResizeLinearLayout>
+</LinearLayout>
