--- a/res/layout/face_item.xml
+++ b/res/layout/face_item.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/face_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" 
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         />
 
 </LinearLayout>
