--- a/res/layout/send_msg_tool.xml
+++ b/res/layout/send_msg_tool.xml
@@ -8,7 +8,8 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/face_viewpager"
         android:layout_width="fill_parent"
-        android:layout_height="140dip"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_gravity="center" >
     </android.support.v4.view.ViewPager>
 
@@ -18,6 +19,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:layout_marginBottom="@dimen/five"
+        android:layout_marginTop="@dimen/five"
         android:orientation="horizontal" >
     </LinearLayout>
 
