--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -66,5 +66,27 @@
     <color name="action_bar_title">#ff282d32</color>
     <color name="publish_bottom_pan_item_title">#ff7d7d82</color>
 
+    <!-- Color in material design -->
+    <color name="material_red_500">#f44336</color>
+    <color name="material_pink_500">#e91e63</color>
+    <color name="material_purple_500">#9c27b0</color>
+    <color name="material_purple_deep_500">#673ab7</color>
+    <color name="material_primar_indigo_500">#3f51b5</color>
+    <color name="material_blue_500">#2196f3</color>
+    <color name="material_blue_light_500">#03a9f4</color>
+    <color name="material_cyan_500">#00bcd4</color>
+    <color name="material_teal_500">#009688</color>
+    <color name="material_green_500">#4caf50</color>
+    <color name="material_green_light_500">#8bc34a</color>
+    <color name="material_lime_500">#cddc39</color>
+    <color name="material_yellow_500">#ffeb3b</color>
+    <color name="material_amber_500">#ffc107</color>
+    <color name="material_orange_500">#ff9800</color>
+    <color name="material_orange_deep_500">#ff5722</color>
+    <color name="material_brown_500">#795548</color>
+    <color name="material_grey_500">#9e9e9e</color>
+    <color name="material_grey_bule_500">#607d8b</color>
+    <color name="material_accent_pink_500">#ff4081</color>
+
 
 </resources>
