--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -89,4 +89,8 @@
     <color name="material_accent_pink_500">#ff4081</color>
 
 
+    <color name="darker_gray">#aaaaaa</color>
+    <color name="white_gray">#e9e9e9</color>
+
+
 </resources>
