--- a/res/layout/ui_foxconn_ess_post_test.xml
+++ b/res/layout/ui_foxconn_ess_post_test.xml
@@ -24,6 +24,8 @@
             android:id="@+id/ui_foxconn_ess_post_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:textColor="@android:color/black"/>
 
         <Button
