--- a/res/layout/fragment_list_speak_recycler.xml
+++ b/res/layout/fragment_list_speak_recycler.xml
@@ -16,7 +16,8 @@
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            />
+            android:paddingTop="@dimen/tabsHeight"
+            android:clipToPadding="false"/>
 
     </com.app.demos.layout.swipeRefreshLayout.Progress_m>
 
