--- a/res/layout/ui_actionbar_hide.xml
+++ b/res/layout/ui_actionbar_hide.xml
@@ -14,27 +14,32 @@
         android:layout_marginTop="?attr/actionBarSize">
 
         <!-- 内容界面 -->
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical" >
-
-            <com.app.demos.layout.other.PagerSlidingTabStrip_my
-                android:id="@+id/tabs"
+            <android.support.v4.view.ViewPager
+                android:id="@+id/ui_actionbar_vPager"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="#000000"
+                android:flipInterval="30"
+                android:persistentDrawingCache="animation" />
+            <LinearLayout
+                android:id="@+id/ui_actionbar_tabs_filter"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/tabsHeight" >
-            </com.app.demos.layout.other.PagerSlidingTabStrip_my>
+                android:layout_height="wrap_content">
+                <com.app.demos.layout.other.PagerSlidingTabStrip_my
+                    android:id="@+id/tabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/tabsHeight" >
+                </com.app.demos.layout.other.PagerSlidingTabStrip_my>
+                <include layout="@layout/discover_speak_filter_header"/>
+            </LinearLayout>
 
-                <android.support.v4.view.ViewPager
-                    android:id="@+id/ui_actionbar_vPager"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:background="#000000"
-                    android:flipInterval="30"
-                    android:persistentDrawingCache="animation" />
-
-        </LinearLayout>
+        </RelativeLayout>
 
         <!-- 侧滑菜单内容 -->
         <LinearLayout
