--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -91,6 +91,8 @@
 
     <color name="darker_gray">#aaaaaa</color>
     <color name="white_gray">#e9e9e9</color>
+    <color name="multifunctional_header_text">#ff464b50</color>
+    <color name="disable_hint">#ffb4b4b4</color>
 
 
 </resources>
