--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="nav_header_vertical_spacing">16dp</dimen>
+    <dimen name="nav_header_height">160dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+
     <dimen name="five">5dip</dimen>
     <dimen name="bottom_bar_height">48.0dip</dimen>
     <dimen name="feed_card_content_text_size">19.0dip</dimen>
@@ -18,8 +26,6 @@
     <dimen name="single_button_text_size">17.0dip</dimen>
     <dimen name="single_button_height">47.0dip</dimen>
     <dimen name="action_bar_title_left_padding">10.0dip</dimen>
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="common_margin">16dip</dimen>
     <dimen name="margin_small">8dp</dimen>
     <dimen name="margin_medium">16dp</dimen>
