--- a/res/layout/toolbar.xml
+++ b/res/layout/toolbar.xml
@@ -7,6 +7,6 @@
     android:background="?attr/colorPrimary"
     android:minHeight="?attr/actionBarSize"
     app:popupTheme="@style/AppTheme.PopupOverlay"
-    app:theme="@style/ThemeOverlay.AppCompat.ActionBar" >
+    app:theme="@style/AppTheme.AppBarOverlay" >
 
 </com.app.demos.layout.ToolBarMy>
