--- a/res/layout/ui_actionbar_hide_v1.xml
+++ b/res/layout/ui_actionbar_hide_v1.xml
@@ -1,21 +1,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.app.demos.ui.UiActionBar"
+    tools:context="com.app.demos.ui.UiActionBar_v1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
-    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
-        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
 
         <include layout="@layout/toolbar" />
-    </android.support.design.widget.AppBarLayout>
+
 
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
         tools:openDrawer="start"
         android:layout_marginTop="?attr/actionBarSize">
 
