--- a/res/layout/activity_authenticator_9_29.xml
+++ b/res/layout/activity_authenticator_9_29.xml
@@ -100,5 +100,5 @@
                 android:text="@string/protocol_text"/>
         </LinearLayout>
     </ScrollView>
-    <include layout="@layout/toolbar" />
+    <include layout="@layout/toolbar_shadow" />
 </RelativeLayout>
