--- a/res/layout/content_main.xml
+++ b/res/layout/content_main.xml
@@ -18,11 +18,16 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <com.app.demos.layout.other.PagerSlidingTabStrip_my
-            android:id="@+id/tabs"
+        <android.support.design.widget.AppBarLayout
+            android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/tabsHeight" >
-        </com.app.demos.layout.other.PagerSlidingTabStrip_my>
+            android:theme="@style/AppTheme.AppBarOverlay" >
+            <com.app.demos.layout.other.PagerSlidingTabStrip_my
+                android:id="@+id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/tabsHeight" >
+            </com.app.demos.layout.other.PagerSlidingTabStrip_my>
+        </android.support.design.widget.AppBarLayout>
         <include
             layout="@layout/discover_speak_filter_header_v2"
             android:layout_height="wrap_content"
