--- a/res/layout/test_ui_zhangben.xml
+++ b/res/layout/test_ui_zhangben.xml
@@ -1,109 +1,165 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/ui_zhanben_header_tv" />
+    <include layout="@layout/toolbar_shadow"/>
 
-    <GridLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="金额"
-            android:id="@+id/ui_zhanben_tv_money"
-            android:layout_row="0"
-            android:layout_column="1" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/ui_zhanben_edit_money"
-            android:layout_row="0"
-            android:layout_column="2" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="消费项目"
-            android:id="@+id/ui_zhanben_tv_type"
-            android:layout_row="1"
-            android:layout_column="1" />
-
-        <EditText
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/ui_zhanben_edit_type"
-            android:layout_row="1"
-            android:layout_column="2" />
+            android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="时间"
-            android:id="@+id/ui_zhanben_tv_time"
-            android:layout_row="2"
-            android:layout_column="1" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New Text"
+                android:id="@+id/ui_zhanben_header_tv" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/ui_zhanben_edit_time"
-            android:layout_row="2"
-            android:layout_column="2" />
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:stretchColumns="1"
+                android:layout_gravity="center"
+                android:useDefaultMargins="true"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp">
+                <TableRow>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="金额(元)"
+                        android:id="@+id/ui_zhanben_tv_money"
+                        android:layout_row="0"
+                        android:layout_column="0"
+                        android:layout_gravity="center_vertical" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="地点"
-            android:id="@+id/ui_zhanben_tv_location"
-            android:layout_row="3"
-            android:layout_column="1" />
+                    <com.app.demos.layout.materialEditText.MaterialEditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:inputType="number"
+                        android:ems="10"
+                        android:id="@+id/ui_zhanben_edit_money"
+                        android:layout_row="0"
+                        android:layout_column="1"
+                        android:hint="请输入金额"
+                        android:maxLength="9"
+                        android:singleLine="true"
+                        android:layout_marginTop="20dp"
+                        app:met_hideUnderline="true"
+                        app:met_floatingLabel="none"
+                        app:met_floatingLabelTextColor="@color/text_color"
+                        app:met_clearButton="true"
+                        app:met_textColor="@color/text_color"
+                        android:gravity="end" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/ui_zhanben_edit_loaction"
-            android:layout_row="3"
-            android:layout_column="2" />
-    </GridLayout>
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="消费项目"
+                        android:id="@+id/ui_zhanben_tv_type"
+                        android:layout_row="1"
+                        android:layout_column="0"
+                        android:layout_gravity="center_vertical" />
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="end">
+                    <com.app.demos.layout.materialEditText.MaterialEditText
+                        android:layout_height="wrap_content"
+                        android:id="@+id/ui_zhanben_edit_type"
+                        android:layout_row="1"
+                        android:layout_column="1"
+                        android:singleLine="true"
+                        android:layout_marginTop="20dp"
+                        app:met_hideUnderline="true"
+                        app:met_floatingLabel="none"
+                        app:met_floatingLabelTextColor="@color/text_color"
+                        app:met_clearButton="true"
+                        app:met_textColor="@color/text_color"
+                        android:gravity="end" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="时间"
+                        android:id="@+id/ui_zhanben_tv_time"
+                        android:layout_row="2"
+                        android:layout_column="0"
+                        android:layout_gravity="center_vertical" />
 
-        <android.support.v7.widget.AppCompatButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="保存"
-            android:id="@+id/ui_zhanben_btn_save" />
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/ui_zhanben_edit_time"
+                        android:layout_row="2"
+                        android:layout_column="1"
+                        android:gravity="end" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="地点"
+                        android:id="@+id/ui_zhanben_tv_location"
+                        android:layout_row="3"
+                        android:layout_column="0"
+                        android:layout_gravity="center_vertical" />
 
-        <android.support.v7.widget.AppCompatButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="下一笔"
-            android:id="@+id/ui_zhanben_btn_next"
-            android:layout_gravity="center_horizontal" />
-    </LinearLayout>
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/ui_zhanben_edit_loaction"
+                        android:layout_row="3"
+                        android:layout_column="1"
+                        android:gravity="end" />
+                </TableRow>
+            </TableLayout>
 
-</LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="end">
+
+                <android.support.v7.widget.AppCompatButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="导出"
+                    android:id="@+id/ui_zhanben_btn_export" />
+
+                <android.support.v7.widget.AppCompatButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="导入"
+                    android:id="@+id/ui_zhanben_btn_import" />
+
+                <android.support.v7.widget.AppCompatButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="下一笔"
+                    android:id="@+id/ui_zhanben_btn_next" />
+
+                <android.support.v7.widget.AppCompatButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="保存"
+                    android:id="@+id/ui_zhanben_btn_save" />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
     </ScrollView>
+</LinearLayout>
