UiZhanBen.java change timePicker

--- a/res/layout/view_time_picker.xml
+++ b/res/layout/view_time_picker.xml
@@ -54,13 +54,14 @@
             android:layout_toEndOf="@id/day_tv"/>
 
         <TextView
-            android:id="@+id/hout_tv"
+            android:id="@+id/hour_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/hour_pv"
             android:layout_toEndOf="@id/hour_pv"
             android:text=" : "
+            android:textColor="@android:color/black"
             android:textSize="@dimen/time_picker_text_size"
             android:textStyle="bold" />
 
@@ -68,8 +69,8 @@
             android:id="@+id/minute_pv"
             android:layout_width="@dimen/time_picker_width"
             android:layout_height="160dp"
-            android:layout_toRightOf="@id/hout_tv"
-            android:layout_toEndOf="@id/hout_tv"/>
+            android:layout_toRightOf="@id/hour_tv"
+            android:layout_toEndOf="@id/hour_tv"/>
 
 
 
