--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -94,6 +94,7 @@
     <color name="white_gray">#e9e9e9</color>
     <color name="multifunctional_header_text">#ff464b50</color>
     <color name="disable_hint">#ffb4b4b4</color>
+    <color name="white_gray2">#f4f3f3</color>
 
 
 </resources>
