--- a/res/layout/customer_view_num_input_pan.xml
+++ b/res/layout/customer_view_num_input_pan.xml
@@ -51,6 +51,7 @@
             android:layout_column="0"
             android:layout_row="1"
             android:background="@drawable/dark_btn_bg"
+            android:textSize="@dimen/num_input_pam_text_size"
             android:text="1" />
 
         <android.support.v7.widget.AppCompatButton
@@ -60,6 +61,7 @@
             android:layout_column="1"
             android:layout_row="1"
             android:background="@drawable/dark_btn_bg"
+            android:textSize="@dimen/num_input_pam_text_size"
             android:text="2" />
 
         <android.support.v7.widget.AppCompatButton
@@ -69,6 +71,7 @@
             android:layout_column="2"
             android:layout_row="1"
             android:background="@drawable/dark_btn_bg"
+            android:textSize="@dimen/num_input_pam_text_size"
             android:text="3" />
 
         <android.support.v7.widget.AppCompatButton
@@ -78,6 +81,7 @@
             android:layout_column="0"
             android:layout_row="2"
             android:background="@drawable/dark_btn_bg"
+            android:textSize="@dimen/num_input_pam_text_size"
             android:text="4" />
 
         <android.support.v7.widget.AppCompatButton
@@ -87,6 +91,7 @@
             android:layout_column="1"
             android:layout_row="2"
             android:background="@drawable/dark_btn_bg"
+            android:textSize="@dimen/num_input_pam_text_size"
             android:text="5" />
 
         <android.support.v7.widget.AppCompatButton
@@ -96,6 +101,7 @@
             android:layout_column="2"
             android:layout_row="2"
             android:background="@drawable/dark_btn_bg"
+            android:textSize="@dimen/num_input_pam_text_size"
             android:text="6" />
 
         <android.support.v7.widget.AppCompatButton
@@ -105,6 +111,7 @@
             android:layout_column="0"
             android:layout_row="3"
             android:background="@drawable/dark_btn_bg"
+            android:textSize="@dimen/num_input_pam_text_size"
             android:text="7" />
 
         <android.support.v7.widget.AppCompatButton
@@ -114,6 +121,7 @@
             android:layout_column="1"
             android:layout_row="3"
             android:background="@drawable/dark_btn_bg"
+            android:textSize="@dimen/num_input_pam_text_size"
             android:text="8" />
 
         <android.support.v7.widget.AppCompatButton
@@ -124,6 +132,7 @@
             android:layout_row="3"
             android:layout_gravity="fill"
             android:background="@drawable/dark_btn_bg"
+            android:textSize="@dimen/num_input_pam_text_size"
             android:text="9" />
 
         <android.support.v7.widget.AppCompatButton
@@ -135,6 +144,7 @@
             android:layout_gravity="fill"
             android:textColor="@color/white"
             android:background="@drawable/dark_btn_bg"
+            android:textSize="@dimen/num_input_pam_text_size"
             android:text="@string/delete" />
 
         <android.support.v7.widget.AppCompatButton
@@ -146,6 +156,7 @@
             android:layout_gravity="fill"
             android:textColor="@color/white"
             android:background="@drawable/dark_btn_bg"
+            android:textSize="@dimen/num_input_pam_text_size"
             android:text="@string/next_bi" />
 
         <android.support.v7.widget.AppCompatButton
@@ -157,6 +168,7 @@
             android:layout_rowSpan="2"
             android:layout_gravity="fill"
             android:textColor="@color/white"
+            android:textSize="@dimen/num_input_pam_text_size"
             android:text="@string/save"
             android:background="@color/green"/>
 
@@ -170,6 +182,7 @@
             android:layout_gravity="fill_horizontal"
             android:layout_row="4"
             android:background="@drawable/dark_btn_bg"
+            android:textSize="@dimen/num_input_pam_text_size"
             android:text="0" />
 
         <android.support.v7.widget.AppCompatButton
@@ -179,6 +192,7 @@
             android:layout_column="0"
             android:layout_row="4"
             android:background="@drawable/dark_btn_bg"
+            android:textSize="@dimen/num_input_pam_text_size"
             android:text="." />
 
     </GridLayout>
