--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -74,6 +74,8 @@
     <dimen name="time_picker_width">@dimen/dp_40</dimen>
     <dimen name="dp_40">40dp</dimen>
     <dimen name="ui_zhangben_category_height">@dimen/dp_40</dimen>
+    <dimen name="num_input_pam_text_size">19sp</dimen>
+    <dimen name="sp_19">19sp</dimen>
 
 
 </resources>
